--- a/style.css
+++ b/style.css
@@ -2,3 +2,111 @@
     margin: 0;
     padding: 0;
 }
+body {
+    font-family: 'Share Tech Mono', monospace;
+    background-color: #ffffff;
+}
+/* the nav bar */
+.navBar {
+    height: 50px;
+    width: 100vw;
+    background-color: black;    display: flex;
+    justify-content: space-between;
+    position: fixed;
+}
+/* left side */
+.left {
+    display: flex;
+}
+.logo{
+    width: 40px;
+    position: relative;
+    margin-left: 4px;
+    padding: 5px;
+}
+.titleNav {
+    color: #59ff00;
+    align-self: center;
+    font-size: 22px;
+}
+/* right side */
+.right {
+    color: #ffffff;
+    display: flex;
+    position: relative;
+    margin-right: 28px;
+    align-self: center;
+    font-size: 22px;
+
+}
+.navRt1 {
+    padding-right: 45px;
+}
+.navRt2 {
+    padding-right: 45px;
+}
+/* the body  */
+.contentOne {
+    display: flex;
+    background-color: #000000;
+    height: 720px;
+    justify-content: center;
+    align-items: center;
+}
+.leftOne{
+ flex: 2;
+ padding-left: 50px;
+}
+/* left side */
+.heading {
+    font-weight: 900;
+    font-size: 63px;
+    color: white;
+}
+.heading:hover {
+    
+    color: #59ff00
+}
+.description {
+    color: #59ff00
+}
+.description:hover {
+    
+    color: white;
+}
+.btn{
+    background-color: #59ff00;
+    border: none;
+    padding: 10px;
+    border-radius: 26px;
+    font-size: 20px;
+    margin-top: 10px;
+    color: black;
+    font-family: 'Share Tech Mono', monospace;
+    
+}
+.btn:hover {
+    background-color: white;
+}
+.btn:active {
+    background-color: gray;
+}
+/* right side */
+.rightOne {
+    padding-right: 50px;
+
+}
+.image {
+    width: 500px;
+}
+/* the testimonial sections */
+.testimonial {
+    background-color: #59ff00;
+    height: 5500px;
+}
+.headingTwo {
+    text-align: center;
+    font-weight: 900;
+    font-size: 45px;
+    padding-top: 54px;
+}
