--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body {
 .navBar {
     height: 50px;
     width: 100vw;
-    background-color: black;    display: flex;
+    background-color: #081602;    display: flex;
     justify-content: space-between;
     position: fixed;
 }
 /* left side */
-.left {
-    display: flex;
+.leftNav {
+    display:flex
 }
 .logo{
     width: 40px;
@@ -37,6 +37,7 @@ body {
     margin-right: 28px;
     align-self: center;
     font-size: 22px;
+    cursor: pointer;
 
 }
 .navRt1 {
@@ -63,16 +64,8 @@ body {
     font-size: 63px;
     color: white;
 }
-.heading:hover {
-    
-    color: #59ff00
-}
 .description {
     color: #59ff00
-}
-.description:hover {
-    
-    color: white;
 }
 .btn{
     background-color: #59ff00;
@@ -83,6 +76,7 @@ body {
     margin-top: 10px;
     color: black;
     font-family: 'Share Tech Mono', monospace;
+    cursor: pointer;
     
 }
 .btn:hover {
@@ -98,15 +92,138 @@ body {
 }
 .image {
     width: 500px;
+    padding-bottom: 10px;
 }
 /* the testimonial sections */
 .testimonial {
     background-color: #59ff00;
-    height: 5500px;
+    height: 407px;
 }
 .headingTwo {
     text-align: center;
     font-weight: 900;
     font-size: 45px;
     padding-top: 54px;
+}
+.t1, .t2, .t3, .t4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+
+}
+.t1:hover, .t2:hover, .t3:hover, .t4:hover {
+    color: #000000;
+
+}
+
+/* spacing */
+.t2, .t3 {
+    justify-content: space-around;
+}
+.t1 , .t4 {
+    justify-content: space-between;
+}
+.pep {
+    display: flex;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    justify-content: space-between;
+    padding-right: 50px;
+    padding-left: 50px;
+}
+.testimonialIMG {
+    width: 150px;
+    border-radius: 50%;
+    padding-bottom: 25px;
+}
+/* the creator message section */
+.creator {
+    height: 400px;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+.rightCreator{
+    justify-content: center;
+}
+.creatorImg {
+    width: 200px;
+    border-radius: 50%;
+}
+.creatorMSG {
+    color: #ffffff;
+    font-size: large;
+}
+.creatorName {
+    color: #59ff00;
+    font-weight: bold;
+ 
+
+}
+/* checkout section */
+.checkout {
+    height: 700px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.leftCK {
+    display: flex;
+    flex-direction: column;
+}
+.rightCK {
+    display: flex;
+}
+.git {
+    padding-right: 50px;
+}
+.checkoutH {
+    font-weight: bold;
+    color: #59ff00;
+    font-size: 50px;
+
+}
+.checkoutD {
+    color: #ffffff;
+}
+.container {
+    width: 700px;
+    height: 221px;
+    background-color:#081602;
+    border-color: #59ff00;
+    border-style: solid;
+    border-width: thin;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+/* footer */ 
+.footer {
+    border-top-color: #59ff00 ;
+    border-top-style: solid ;
+    border-top-width: thin ;
+    height: 50px;
+    background-color: #081602;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footerTXT {
+    color: #ffffff;
+}
+.footerTXT:hover{
+    color: #000000;
+}
+.credit {
+    color: #ffffff;
 }
